# TreeMenuDjango

./: .env.dev  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/: Dockerfile  db.sqlite3.test  entrypoint.sh
app/config/: settings.py  urls.py
app/menu/: admin.py  apps.py  models.py  servises.py  urls.py  views.py
app/menu/migrations/: 0001_initial.py  0002_remove_menu_slag_menu_slug.py
app/menu/templatetags/: menu.py
app/menu/tests/: test_admin.py  test_models.py  test_templatetags.py
app/templates/: base.html
app/templates/menu/: menu.html  nested_menu.html  test_index.html  test_menu.html
